--- a/BonfireMod.csproj
+++ b/BonfireMod.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\ModdingAPI_1.3.1.5_beta\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\ModdingAPI_1.3.1.5_test2\hollow_knight_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="PlayMaker">
       <HintPath>..\..\..\PlayMaker.dll</HintPath>
