Turned bench into bonfy!

--- a/Bonfire.csproj
+++ b/Bonfire.csproj
@@ -68,6 +68,9 @@
     <Reference Include="UnityEngine.CoreModule">
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.ImageConversionModule">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="UnityEngine.IMGUIModule">
       <Private>False</Private>
     </Reference>
@@ -85,9 +88,44 @@
     <Delete Files="$(OutputPath)System.Core.dll" Condition="Exists('$(OutputPath)System.Core.dll')" />
   </Target>
   <ItemGroup>
+    <Compile Include="BonfyBench.cs" />
     <Compile Include="BonfireMod.cs" />
     <Compile Include="PlayerStatus.cs" />
     <Compile Include="LevellingSystem.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Bonfy\0.png" />
+    <EmbeddedResource Include="Resources\Bonfy\1.png" />
+    <EmbeddedResource Include="Resources\Bonfy\2.png" />
+    <EmbeddedResource Include="Resources\Bonfy\3.png" />
+    <EmbeddedResource Include="Resources\Bonfy\4.png" />
+    <EmbeddedResource Include="Resources\Bonfy\5.png" />
+    <EmbeddedResource Include="Resources\Bonfy\6.png" />
+    <EmbeddedResource Include="Resources\Bonfy\7.png" />
+    <EmbeddedResource Include="Resources\Bonfy\8.png" />
+    <EmbeddedResource Include="Resources\Bonfy\9.png" />
+    <EmbeddedResource Include="Resources\Bonfy\10.png" />
+    <EmbeddedResource Include="Resources\Bonfy\11.png" />
+    <EmbeddedResource Include="Resources\Bonfy\12.png" />
+    <EmbeddedResource Include="Resources\Bonfy\13.png" />
+    <EmbeddedResource Include="Resources\Bonfy\14.png" />
+    <EmbeddedResource Include="Resources\Bonfy\15.png" />
+    <EmbeddedResource Include="Resources\Bonfy\16.png" />
+    <EmbeddedResource Include="Resources\Bonfy\17.png" />
+    <EmbeddedResource Include="Resources\Bonfy\18.png" />
+    <EmbeddedResource Include="Resources\Bonfy\19.png" />
+    <EmbeddedResource Include="Resources\Bonfy\20.png" />
+    <EmbeddedResource Include="Resources\Bonfy\21.png" />
+    <EmbeddedResource Include="Resources\Bonfy\22.png" />
+    <EmbeddedResource Include="Resources\Bonfy\23.png" />
+    <EmbeddedResource Include="Resources\Bonfy\24.png" />
+    <EmbeddedResource Include="Resources\Bonfy\25.png" />
+    <EmbeddedResource Include="Resources\Bonfy\26.png" />
+    <EmbeddedResource Include="Resources\Bonfy\27.png" />
+    <EmbeddedResource Include="Resources\Bonfy\28.png" />
+    <EmbeddedResource Include="Resources\Bonfy\29.png" />
+    <EmbeddedResource Include="Resources\Hive\Idle.png" />
+    <EmbeddedResource Include="Resources\Hive\Cracked.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
